# AI-DAMS

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: pyproject.toml
apps/api/app/: audit.py  bootstrap.py  config.py  db.py  main.py  models.py  queue.py  schemas.py  security.py  storage.py
apps/api/app/routers/: admin.py  assets.py  auth.py  collections.py  distribution.py  health.py  persons.py  search.py  stats.py  workflow.py
apps/api/app/search/: constants.py  decompose.py  embed_client.py  hybrid.py  opensearch_store.py  qdrant_store.py
apps/web/: next.config.mjs  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/asset/[id]/: page.tsx
apps/web/app/collections/: page.tsx
apps/web/app/distribution/: page.tsx
apps/web/app/explorer/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/reports/: page.tsx
apps/web/app/search/: page.tsx
apps/web/app/upload/: page.tsx
apps/web/app/workflow/: page.tsx
apps/web/components/: AppShell.tsx  AssetCard.tsx  DocReader.tsx
apps/web/lib/: api.ts
docs/: ARCHITECTURE.md  QA_PRODUCTION_READINESS.md  RELIABILITY.md  ROADMAP.md  SCALE_AND_DR.md  TAGGING_AND_SEARCH_GUIDE.md
infra/postgres/: init.sql
scripts/: audit_photo_recall.py  backfill_modality_fields.py  backfill_ocr_images.py  backfill_ocr_only.py  backfill_strip_absence.py  backfill_video_visual.py  backfill_window_transcripts.py  backup.ps1  bakeoff.py  bulk_ingest.py  check_encoding.py  dev.ps1  dump_video_enrich.py  e2e.py  e2e_audio.py  e2e_faces.py  e2e_facesearch.py  e2e_images.py  e2e_video.py  ingest_song_sample.py  ingest_voiceclone.py  install_watchdog_task.ps1  paddle_page_ocr.py  poll_aruni.py  probe_relevance.py  probe_xling.py  qa_api.py  qa_audio_search.py  qa_backends.py  qa_concurrency.py  qa_governance.py  qa_hallucination.py  qa_ingest.py  qa_latency.py  qa_precision.py  qa_search.py  qa_synonyms.py  qa_timing.py  qa_usecases.py  qa_video_objpeople.py  (+12 more)
services/ai-worker/: pyproject.toml
services/ai-worker/worker/: asr.py  caption.py  config.py  main.py  models.py  parsing.py  server.py  serving_client.py  stores.py  timecode.py  vision.py
services/ai-worker/worker/pipelines/: audio.py  common.py  documents.py  enrich.py  images.py  media_common.py  video.py
