[project]
name = "dam-api"
version = "0.1.0"
description = "DAM Platform — application plane (FastAPI): search, assets, collections, distribution, workflow, admin."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "python-jose[cryptography]>=3.3",
    "passlib>=1.7",
    "bcrypt<4.1",          # passlib 1.7.4 is incompatible with bcrypt>=4.1 / 5.x
    "python-multipart>=0.0.12",
    "boto3>=1.35",
    "qdrant-client>=1.12",
    "opensearch-py>=2.7",
    "redis>=5.2",
    "arq>=0.26",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
